--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -136,6 +136,7 @@
     color: #4db5ff;
     font-size: 20px;
     font-weight: 500;
+    margin-top: 15px;
     margin-bottom: 15px;
     letter-spacing: 1px;
 }
